<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MasterTravel</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="apply">Done</string>

    <!--DRAWER-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_my_profile">My Profile</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_home">Home</string>

    <!-- LOGIN-->
    <string name="login_hint_username">USERNAME</string>
    <string name="login_hint_password">PASSWORD</string>
    <string name="login_hint_remember_password">Remember me</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_register">Register</string>
    <string name="login_empty_error">The username and password can\'t be empty</string>
    <string name="login_invalid_error">Invalid username or password</string>

    <!--REGISTER-->
    <string name="register_message">Please enter your username to register a new account. The account password will be automatically set to \'password\'.</string>
    <string name="register_button">Register</string>
    <string name="register_empty">The user can\'t be empty</string>
    <string name="register_hint_username">Username</string>
    <string name="register_error">Username already taken - Please try another</string>

    <!--HOME-->
    <string name="find_flight">Find Flight</string>
    <string name="find_hotel">Find Hotel</string>

    <!--PROFILE-->
    <string name="profile_pair_title">Connect with MasterPass</string>
    <string name="profile_pair_message">Your account is now paired with your MasterPass wallet.
        The next time you checkout, you will simply need to enter your MasterPass password to process the order.</string>

    <!--MOCK-->
    <string name="mock_view_flights">Flights View</string>
    <string name="mock_view_hotels">Hotels View</string>
    <string name="mock_search_hotels">Search</string>
    <string name="mock_view_profile">Profile View</string>
    <string name="mock_view_settings">Settings View</string>
    <string name="mock_password">password</string>

    <!--Activities Titles-->
    <string name="find_hotels">Find Hotels</string>
    <string name="find_flights">Find Flights</string>
    <string name="checkout">Checkout</string>
    <string name="detail">Detail</string>
    <string name="success">Success</string>
    <string name="my_profile">My Profile</string>

    <string name="find_hotel_location">LOCATION</string>
    <string name="find_hotel_check_in">CHECK IN</string>
    <string name="find_hotel_check_out">CHECK OUT</string>
    <string name="find_hotel_guests">GUESTS</string>
    <string name="find_hotel_roms">ROMS</string>

    <string name="find_hotel_location_hint">Select Location</string>

    <string name="detail_hotel_description_address">ADDRESS</string>
    <string name="detail_hotel_description_amenities">AMENITIES</string>

    <string name="detail_hotel_reviews_rating">AVERAGE</string>
    <string name="detail_hotel_reviews_service">SERVICE</string>
    <string name="detail_hotel_reviews_hotel">CLEANLINESS</string>

    <string name="my_profile_first_name">FIRST NAME</string>
    <string name="my_profile_last_name">LAST NAME</string>
    <string name="my_profile_phone_number">PHONE NUMBER</string>
    <string name="my_profile_email_address">EMAIL ADDRESS</string>

    <string name="my_profile_account_paired">Account paired with MasterPass Wallet</string>

    <string name="my_profile_learn_more">Learn More</string>

    <string name="my_profile_learn_more_dialog_title">Connect with MasterPass</string>
    <string name="my_profile_learn_more_dialog_message">Connect your MasterPass with MasterTravel to check out faster.\n\nWhen you connect to MasterPass to MasterTravel, MasterTravel receives certain information that it may use to personalize your shopping experience and help your make easier purchases</string>

    <string name="required_fields_required_title">Required Files</string>
    <string name="required_fields_required">Please Fill Required Files</string>

    <string name="empty_products">There is no items</string>
    <string name="error_products">Error when trying items</string>
    <string name="loading_products">Loading</string>

    <string name="find_flight_from">FROM</string>
    <string name="find_flight_to">TO</string>
    <string name="find_flight_passengers">PASSENGERS</string>
    <string name="find_flight_cabin_class">CABIN CLASS</string>
    <string name="find_flight_depart">DEPART</string>
    <string name="find_flight_return">RETURN</string>


    <!--ActionBar-->
    <string name="find">Results</string>

    <!--Sort-->
    <string name="sort_title">Sort Hotels</string>
    <string name="sort_price">Price</string>
    <string name="sort_average_review">Average Review</string>
    <string name="sort_stars">Industry Stars</string>
    <string name="sort_distance_from_city_center">Distance from City Center</string>

    <!--Hotel Filter-->
    <string name="hotel_filter_title">Filter Hotels</string>
    <string name="filter_industry_stars">INDUSTRY STARS</string>
    <string name="filter_price">PRICE</string>
    <string name="filter_propery_name">PROPERTY NAME</string>
    <string name="filter_property_types">PROPERTY TYPES</string>
    <string name="filter_chains">Chains</string>

    <string name="no_hotel_found">Not Hotels found</string>
    <string name="hotel_found"> %1$d Hotels found</string>

    <string name="no_flight_found">Not Flights found</string>
    <string name="flight_found"> %1$d Flights found</string>

    <!--Flight Filter-->
    <string name="non_stop_flights_only">Nonstop Flights Only</string>
    <string name="airlines">AIRLINES</string>
    <string name="outbound_takeoff_time">OUTBOUND TAKEOFF TIME</string>
    <string name="return_takeoff_time">RETURN TAKEOFF TIME</string>
    <!--Detail-->
    <string name="book_now">Book Now</string>

    <!--Map-->
    <string name="see_closer_hotels">Swipe to see the closer hotel</string>

    <string name="hotel_success_message">Booking successfully completed</string>


    <!--Flights Sort-->
    flight_sort_departure_take_off_time
    <string name="flight_sort_departure_take_off_time">Departure Take Off Time</string>
    <string name="flight_sort_departure_landing_time">Departure Landing Time</string>
    <string name="flight_sort_return_take_off_time">Return Take Off Time</string>
    <string name="flight_sort_return_landing_time">Return Landing Time</string>
    <string name="flight_sort_airline">Airline</string>
    <string name="flight_sort_duration">Duration</string>
    <string name="sort_title_flights">Sort Flights</string>


    <!--Flight List-->
    <string name="departure_title">DEPARTURE</string>
    <string name="return_title">RETURN</string>
    <string name="per_person_title">PER PERSON</string>


    <!--Cabin Class Picker-->
    <string name="cabin_class">Cabin Class</string>
    <string name="economy">Economy</string>
    <string name="premium_economy">Premium Economy</string>
    <string name="business">Business</string>
    <string name="first_class">First-Class</string>
    <string name="find_cabin_class">Select Cabin Class</string>

    <!--Range bar-->
    <string name="min_range_bar_default">min</string>
    <string name="max_range_bar_default">max</string>

    <!--BOOK-->
    <string name="processing_reservation">Processing Your Reservation</string>
    <string name="checkout_enter_card">Enter Credit / Debit</string>
    <string name="checkout_header">Choose your card</string>

    <!--CHECKOUT-->
    <string name="empty_cards">There is no cards</string>
    <string name="error_cards">Error obtaining cards</string>
    <string name="or">Or</string>
    <string name="cart_confirm_booking">Confirm Booking</string>
    <string name="processing">Processing Your Payment</string>

    <string name="taxes_text">Include \ntaxes &amp; fees</string>
</resources>
