<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sort_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/cabin_class"
        android:textColor="@color/sort_big_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sort_separator" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sort_background"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/economy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/economy"
            android:textColor="@color/sort_item"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/sort_separator" />

        <TextView
            android:id="@+id/premium_economy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/premium_economy"
            android:textColor="@color/sort_item"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/sort_separator" />

        <TextView
            android:id="@+id/business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/business"
            android:textColor="@color/sort_item"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/sort_separator" />

        <TextView
            android:id="@+id/first_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/first_class"
            android:textColor="@color/sort_item"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/sort_separator" />
    </LinearLayout>
</LinearLayout>